using System;
using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public interface I_PlayerDataLoadable {
   public abstract PlayerData LoadData();
}
