using System;
using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class StageManager : I_StageClearAlertable{
    public StageManager (I_PlayerDataUpdatable playerDataLoader){

    }

    public void ObserveStageClearAlert(Action method){

    }
}
